tictactoe_app 2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-tictactoe
  namespace: tictactoe
spec:
  selector:
    app: tictactoe
  ports:
    - protocol: TCP
      port: 80          # Puerto del servicio dentro del clúster
      targetPort: 80    # Puerto dentro del contenedor
  type: ClusterIP
