tictactoe_app 2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: tictactoe
spec:
  rules:
    - host: nino.hola
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-tictactoe
                port:
                  number: 80
